# mnist-sbi

./: LICENSE  README.md  drawing_digits.py  pyproject.toml  simulator.py
mnistsbi/: __init__.py  digits_specs.py  simulator.py
